docker-compose.yml and ci settings updated
